# Project-SL

./: .gitignore  README.md  package-lock.json  pyproject.toml
SpiffoList/: settings.py  urls.py
listings/: models.py
theme/static_src/: tailwind.config.js
theme/templates/: base.html
