[tool.poetry]
name = "project-sl"
version = "0.1.0"
description = ""
authors = ["lambdacore <jonathanwh93@gmail.com>"]
readme = "README.md"
packages = [{include = "project_sl"}]

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.1.5"
django-browser-reload = "^1.6.0"
django-tailwind = "^3.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
